# hematite-benchmark

./: .gitignore  Cargo.toml  README.md
crates/benchmark-app/: Cargo.toml
crates/benchmark-app/src/: engine.rs  lib.rs  metrics.rs  runtime.rs  server.rs
crates/benchmark-app/static/: app.js  index.html  styles.css
crates/benchmark-app/tests/: worker_process.rs
crates/benchmark-core/: Cargo.toml
crates/benchmark-core/src/: aggregate.rs  config.rs  lib.rs  message.rs
