[workspace]
members = ["crates/benchmark-app", "crates/benchmark-core"]
default-members = ["crates/benchmark-app"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json", "macros"] }
benchmark-core = { path = "crates/benchmark-core" }
bytes = "1.10.1"
futures = "0.3.31"
hematite = { package = "hematite-db", path = "../hematite" }
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
