[package]
name = "benchmark-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "benchmark_app"
path = "src/lib.rs"

[[bin]]
name = "benchmark-server"
path = "src/bin/server.rs"

[[bin]]
name = "benchmark-worker"
path = "src/bin/worker.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
benchmark-core.workspace = true
bytes.workspace = true
futures.workspace = true
hematite.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

